<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SalesFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_sales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="Fazer uma venda"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        />

    <TextView
        android:id="@+id/tv_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_number"
        app:layout_constraintTop_toBottomOf="@id/tb_sales"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_order_id"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/client"
        android:layout_marginTop="24dp"
        />


    <EditText
        android:id="@+id/et_client_input"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:hint="@string/write_client_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_client"
        app:layout_constraintTop_toTopOf="@id/tv_client" />

    <TextView
        android:id="@+id/tv_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_client"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/product"
        />

    <EditText
        android:id="@+id/et_product_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_product"
        app:layout_constraintBottom_toBottomOf="@id/tv_product"
        android:hint="@string/product_name"
        />

    <EditText
        android:id="@+id/et_quantity_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/et_product_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <EditText
        android:id="@+id/et_unit_value_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/et_quantity_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_total_item_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_item_value"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_unit_value_input"
        />

    <Button
        android:id="@+id/btn_include"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/include"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_total_item_value"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_products"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_include"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_total_items_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_items_count"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/rv_products"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_total_order_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_order_value"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_total_items_count"
        />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/tv_total_order_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/btn_save_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/tv_total_order_value"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>