<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableLayout
        android:id="@+id/table_heading_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_product_name"
                style="@style/table_row_item"
                android:layout_width="0dp"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/name"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_product_qty"
                style="@style/table_row_item"
                android:layout_width="0dp"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/quantity"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_product_price"
                style="@style/table_row_item"
                android:layout_width="0dp"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:baselineAligned="false"
                android:text="@string/value"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_product_total"
                style="@style/table_row_item"
                android:layout_width="0dp"
                android:layout_column="3"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/total_value"
                android:textAlignment="center" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>